[package]
name = "rs-rag-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = "0.12.0"
task_graph = { git = "https://github.com/a-agmon/task-graph.git", package = "task-graph-svc" }
async-trait = "0.1.88"
anyhow = "1.0.98"
bon = "3.6.3"
serde_json = "1.0"
