[package]
name = "rs-rag-svc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "web-scraper-test"
path = "src/bin/web_scraper_test.rs"

[[bin]]
name = "google-search-test"
path = "src/bin/google_search_test.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rig-core = "0.12.0"
task-graph = { git = "https://github.com/a-agmon/rs-task-graph.git", package = "task-graph" }
async-trait = "0.1.88"
anyhow = "1.0.98"
serde_json = "1.0"
reqwest = { version = "0.12.19", features = ["json", "cookies"] }
headless_chrome = "1.0.17"
scraper = "0.23.1"
futures = "0.3"
once_cell = "1.21.0"
urlencoding = "2.1"
